Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Comment__c/Weekly_Report_Comment__c.object-meta.xml
<CustomObject>
    <label>Weekly Report Comment</label>
    <nameField>
        <displayFormat>CMT-{YYYY}{MM}-{00000}</displayFormat>
        <label>Weekly Report Comment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Report Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>