Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Comment__c/fields/Comment_User__c.field-meta.xml
<CustomField>
    <fullName>Comment_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comment User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Weekly_Report_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>