Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Comment__c/fields/Weekly_Report_Data_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Report_Data_This_Week__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weekly Report Data This Week</label>
    <referenceTo>Weekly_Report_Data_This_Week__c</referenceTo>
    <relationshipLabel>Weekly Report Comments</relationshipLabel>
    <relationshipName>Weekly_Report_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>